fixed image aligning

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -1133,7 +1133,6 @@ mark,
 }
 .text-center {
   text-align: center;
-  padding-top:50px;
 }
 .text-justify {
   text-align: justify;
